# AdvancedImageAnalyzer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Colors.cpp  Colors.h  Filters.cpp  Filters.h  GuiWindow.h  Histogram.cpp  Histogram.h  ImageLoader.cpp  ImageLoader.h  ImageWindow.cpp  ImageWindow.h  Layers.cpp  Layers.h  Menu.cpp  Menu.h  Operations.cpp  Operations.h  Utils.cpp  Utils.h  Window.cpp  Window.h
